--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar">
       <div class="container navbar-content">
-        <a class="brand" href="{{ url_for('dashboard.dashboard') }}">
+<a class="brand" href="{{ url_for('dashboard_bp.dashboard') }}">
           <i class="fas fa-brain"></i> Mindful Minutes
         </a>
         <div class="nav-links">
